--- a/team.html
+++ b/team.html
@@ -294,7 +294,7 @@
     <div class="card hoverable">
         <div class="row no-gutters">
             <div class="col-sm-4 col-md-3">
-                <img src="/assets/img/eskandani-profile.jpg" class="card-img img-fluid" alt="MSc Nafise Eskandani" />
+                <img src="/assets/img/yangxinyu-profile.jpg" class="card-img img-fluid" alt="MSc Nafise Eskandani" />
             </div>
             <div class="team col-sm-8 col-md-9">
                 <div class="card-body">
@@ -332,7 +332,7 @@
     <div class="card hoverable">
         <div class="row no-gutters">
             <div class="col-sm-4 col-md-3">
-                <img src="/assets/img/koehler-profile.jpg" class="card-img img-fluid" alt="MSc Mirko Köhler" />
+                <img src="/assets/img/qiancong-profile.jpg" class="card-img img-fluid" alt="MSc Mirko Köhler" />
             </div>
             <div class="team col-sm-8 col-md-9">
                 <div class="card-body">
@@ -368,7 +368,7 @@
     <div class="card hoverable">
         <div class="row no-gutters">
             <div class="col-sm-4 col-md-3">
-                <img src="/assets/img/oak-profile.jpg" class="card-img img-fluid" alt="MSc Aditya Oak" />
+                <img src="/assets/img/sunruoxi-profile.jpg" class="card-img img-fluid" alt="MSc Aditya Oak" />
             </div>
             <div class="team col-sm-8 col-md-9">
                 <div class="card-body">
@@ -406,7 +406,7 @@
     <div class="card hoverable">
         <div class="row no-gutters">
             <div class="col-sm-4 col-md-3">
-                <img src="/assets/img/sokolowski-profile.jpg" class="card-img img-fluid" alt="MSc Daniel Sokolowski" />
+                <img src="/assets/img/xujunqi-profile.jpg" class="card-img img-fluid" alt="MSc Daniel Sokolowski" />
             </div>
             <div class="team col-sm-8 col-md-9">
                 <div class="card-body">
@@ -450,7 +450,7 @@
     <div class="card hoverable">
         <div class="row no-gutters">
             <div class="col-sm-4 col-md-3">
-                <img src="/assets/img/zakhour-profile.jpg" class="card-img img-fluid" alt="MSc George Zakhour" />
+                <img src="/assets/img/zhuchenyu-profile.jpg" class="card-img img-fluid" alt="MSc George Zakhour" />
             </div>
             <div class="team col-sm-8 col-md-9">
                 <div class="card-body">
@@ -488,7 +488,7 @@
     <div class="card hoverable">
         <div class="row no-gutters">
             <div class="col-sm-4 col-md-3">
-                <img src="/assets/img/zakhour-profile.jpg" class="card-img img-fluid" alt="MSc George Zakhour" />
+                <img src="/assets/img/zhongzhouhan-profile.jpg" class="card-img img-fluid" alt="MSc George Zakhour" />
             </div>
             <div class="team col-sm-8 col-md-9">
                 <div class="card-body">
@@ -526,7 +526,7 @@
     <div class="card hoverable">
         <div class="row no-gutters">
             <div class="col-sm-4 col-md-3">
-                <img src="/assets/img/zakhour-profile.jpg" class="card-img img-fluid" alt="MSc George Zakhour" />
+                <img src="/assets/img/wangwenwei-profile.jpg" class="card-img img-fluid" alt="MSc George Zakhour" />
             </div>
             <div class="team col-sm-8 col-md-9">
                 <div class="card-body">
@@ -564,7 +564,7 @@
     <div class="card hoverable">
         <div class="row no-gutters">
             <div class="col-sm-4 col-md-3">
-                <img src="/assets/img/zakhour-profile.jpg" class="card-img img-fluid" alt="MSc George Zakhour" />
+                <img src="/assets/img/wangxiaomeng-profile.jpg" class="card-img img-fluid" alt="MSc George Zakhour" />
             </div>
             <div class="team col-sm-8 col-md-9">
                 <div class="card-body">
@@ -602,7 +602,7 @@
     <div class="card hoverable">
         <div class="row no-gutters">
             <div class="col-sm-4 col-md-3">
-                <img src="/assets/img/zakhour-profile.jpg" class="card-img img-fluid" alt="MSc George Zakhour" />
+                <img src="/assets/img/hanhongrun-profile.jpg" class="card-img img-fluid" alt="MSc George Zakhour" />
             </div>
             <div class="team col-sm-8 col-md-9">
                 <div class="card-body">
@@ -640,7 +640,7 @@
     <div class="card hoverable">
         <div class="row no-gutters">
             <div class="col-sm-4 col-md-3">
-                <img src="/assets/img/zakhour-profile.jpg" class="card-img img-fluid" alt="MSc George Zakhour" />
+                <img src="/assets/img/tangpei-profile.jpg" class="card-img img-fluid" alt="MSc George Zakhour" />
             </div>
             <div class="team col-sm-8 col-md-9">
                 <div class="card-body">
@@ -678,7 +678,7 @@
     <div class="card hoverable">
         <div class="row no-gutters">
             <div class="col-sm-4 col-md-3">
-                <img src="/assets/img/zakhour-profile.jpg" class="card-img img-fluid" alt="MSc George Zakhour" />
+                <img src="/assets/img/qianyufan-profile.jpg" class="card-img img-fluid" alt="MSc George Zakhour" />
             </div>
             <div class="team col-sm-8 col-md-9">
                 <div class="card-body">
@@ -716,7 +716,7 @@
     <div class="card hoverable">
         <div class="row no-gutters">
             <div class="col-sm-4 col-md-3">
-                <img src="/assets/img/zakhour-profile.jpg" class="card-img img-fluid" alt="MSc George Zakhour" />
+                <img src="/assets/img/houlingjia-profile.jpg" class="card-img img-fluid" alt="MSc George Zakhour" />
             </div>
             <div class="team col-sm-8 col-md-9">
                 <div class="card-body">
@@ -754,7 +754,7 @@
     <div class="card hoverable">
         <div class="row no-gutters">
             <div class="col-sm-4 col-md-3">
-                <img src="/assets/img/zakhour-profile.jpg" class="card-img img-fluid" alt="MSc George Zakhour" />
+                <img src="/assets/img/yincengshuai-profile.jpg" class="card-img img-fluid" alt="MSc George Zakhour" />
             </div>
             <div class="team col-sm-8 col-md-9">
                 <div class="card-body">
@@ -792,7 +792,7 @@
     <div class="card hoverable">
         <div class="row no-gutters">
             <div class="col-sm-4 col-md-3">
-                <img src="/assets/img/zakhour-profile.jpg" class="card-img img-fluid" alt="MSc George Zakhour" />
+                <img src="/assets/img/shijunan-profile.jpg" class="card-img img-fluid" alt="MSc George Zakhour" />
             </div>
             <div class="team col-sm-8 col-md-9">
                 <div class="card-body">
@@ -830,7 +830,7 @@
     <div class="card hoverable">
         <div class="row no-gutters">
             <div class="col-sm-4 col-md-3">
-                <img src="/assets/img/zakhour-profile.jpg" class="card-img img-fluid" alt="MSc George Zakhour" />
+                <img src="/assets/img/zhongyiming-profile.jpg" class="card-img img-fluid" alt="MSc George Zakhour" />
             </div>
             <div class="team col-sm-8 col-md-9">
                 <div class="card-body">
