--- a/team.html
+++ b/team.html
@@ -294,7 +294,7 @@
     <div class="card hoverable">
         <div class="row no-gutters">
             <div class="col-sm-4 col-md-3">
-                <img src="/assets/img/yangxinyu-profile.jpg" class="card-img img-fluid" alt="MSc Nafise Eskandani" />
+                <img src="/assets/img/yangxinyu-profile.jpg" class="card-img img-fluid" alt="Xinyu Yang" />
             </div>
             <div class="team col-sm-8 col-md-9">
                 <div class="card-body">
