--- a/team.html
+++ b/team.html
@@ -302,7 +302,7 @@
                     <h5 class="card-title">Xinyu Yang</h5>
                     
                     <p class="card-text">
-                        I am a part-time PhD student at the Technical University of Darmstadt and an Associate Scientist at ABB Corporate Research Center. My research interests include Cloud Computing, Software Engineering, and Software Architecture. Currently, I am working on programming models for decentralized and resilient systems.
+                        I am a sophomore student at School of Future Science and Engineering of Soochow University which located in Suzhou, Jiangsu Province, China.
 
                     </p>
                     </a>
