--- a/team.html
+++ b/team.html
@@ -298,7 +298,7 @@
             </div>
             <div class="team col-sm-8 col-md-9">
                 <div class="card-body">
-                    <a href="/members/eskandani">
+                    <a href="https://xinyu1213.github.io/">
                     <h5 class="card-title">Xinyu Yang</h5>
                     
                     <p class="card-text">
