--- a/team.html
+++ b/team.html
@@ -332,15 +332,15 @@
     <div class="card hoverable">
         <div class="row no-gutters">
             <div class="col-sm-4 col-md-3">
-                <img src="/assets/img/qiancong-profile.jpg" class="card-img img-fluid" alt="MSc Mirko Köhler" />
+                <img src="/assets/img/qiancong-profile.jpg" class="card-img img-fluid" alt="Cong Qian" />
             </div>
             <div class="team col-sm-8 col-md-9">
                 <div class="card-body">
-                    <a href="/members/koehler">
+                    <a href="https://qcyxy.github.io/">
                     <h5 class="card-title">Cong Qian</h5>
                     
                     <p class="card-text">
-                        I work on programming abstractions for replicated data. Currently, I'm the main contributor to ConSysT, an object-oriented language for mixed consistency with replicated objects. My research interests include concurrency, mixed consistency protocols, and type systems.
+                        I am a sophomore student at School of Future Science and Engineering of Soochow University which located in Suzhou, Jiangsu Province, China.
 
                     </p>
                     </a>
@@ -376,7 +376,7 @@
                     <h5 class="card-title">Ruoxi Sun</h5>
                     
                     <p class="card-text">
-                        I am a sophomore student at School of Future Science and Engineering of Soochow University which located in Suzhou, Jiangsu Province, China.I like singing and listening to music,and is extremely fond of trying new things.
+                        I am a sophomore student at School of Future Science and Engineering of Soochow University which located in Suzhou, Jiangsu Province, China.
 
                     </p>
                     </a>
