--- a/team.html
+++ b/team.html
@@ -14,12 +14,12 @@
 <meta property="og:locale" content="en_US" />
 <meta name="description" content="Members and close collaborators of the group." />
 <meta property="og:description" content="Members and close collaborators of the group." />
-<link rel="canonical" href="https://programming-group.com/team" />
-<meta property="og:url" content="https://programming-group.com/team" />
-<meta property="og:site_name" content="Programming Group" />
-<meta property="og:image" content="https://programming-group.com/assets/img/og/pg.png" />
+<link rel="canonical" href="https://aaxiyao1823.github.io/team" />
+<meta property="og:url" content="https://aaxiyao1823.github.io/team" />
+<meta property="og:site_name" content="BeeLab" />
+<meta property="og:image" content="https://aaxiyao1823.github.io/assets/img/og/pg.png" />
 <meta name="twitter:card" content="summary_large_image" />
-<meta property="twitter:image" content="https://programming-group.com/assets/img/og/pg.png" />
+<meta property="twitter:image" content="https://aaxiyao1823.github.io/assets/img/og/pg.png" />
 <meta property="twitter:title" content="Team" />
 <meta name="google-site-verification" content="RMUCoHAseeFv2jAdfyJb4XLx4e1J8XpU1l8fvwAxk1g" />
 <script type="application/ld+json">
@@ -44,7 +44,7 @@
     <nav id="navbar" class="navbar navbar-light navbar-expand">
     <div class="container px-md-3">
       <a href="/" class="">
-        <img src="/assets/img/pg-logo.svg" alt="Programming Group"/>
+        <img src="/assets/img/pg-logo.svg" alt="BeeLab"/>
       </a>
       
       <!-- Navbar Toggle -->
