--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 <meta property="og:locale" content="en_US" />
 <meta name="description" content="Welcome to the Programming Group at the University of St. Gallen and at the Technical University of Darmstadt. Team. Projects. Support." />
 <meta property="og:description" content="Welcome to the Programming Group at the University of St. Gallen and at the Technical University of Darmstadt. Team. Projects. Support." />
-<link rel="canonical" href="https://programming-group.com/" />
-<meta property="og:url" content="https://programming-group.com/" />
+<link rel="canonical" href="https://aaxiyao1823.github.io/" />
+<meta property="og:url" content="https://aaxiyao1823.github.io/" />
 <meta property="og:site_name" content="Programming Group" />
-<meta property="og:image" content="https://programming-group.com/assets/img/og/pg.png" />
+<meta property="og:image" content="https://aaxiyao1823.github.io/assets/img/og/pg.png" />
 <meta name="twitter:card" content="summary_large_image" />
-<meta property="twitter:image" content="https://programming-group.com/assets/img/og/pg.png" />
+<meta property="twitter:image" content="https://aaxiyao1823.github.io/assets/img/og/pg.png" />
 <meta property="twitter:title" content="Home" />
 <meta name="google-site-verification" content="RMUCoHAseeFv2jAdfyJb4XLx4e1J8XpU1l8fvwAxk1g" />
 <script type="application/ld+json">
