--- a/index.html
+++ b/index.html
@@ -205,12 +205,8 @@
 — Lewis Carroll</p>
 </blockquote>
 
-<p>Welcome to the Programming Group!
-We are part of the <a href="https://ics.unisg.ch/" target="_blank">Institute of Computer Science (ICS)</a> at the <a href="https://www.unisg.ch/" target="_blank">University of St. Gallen (HSG)</a>
-and have a branch at the <a href="https://www.tu-darmstadt.de/" target="_blank">Technical University of Darmstadt</a>. 
-Together we enjoy working on <strong>Programming Languages</strong>
-and <strong>Software Engineering</strong>, including languages and architectures for
-<strong>Distributed Systems</strong>, <strong>Reactive Programming</strong>, <strong>DevOps Organizations</strong>, and <strong>Secure Software Systems</strong>.</p>
+<p>Welcome to BeeLab’s website.
+The lab is guided by Associate Professor Cong Yang and is organized by several students from the <a href="http://future.suda.edu.cn/bkzs/main.htm" target="_blank">School of Future Science and Engineering, Soochow University</a>. Our projects focus on smart driving and smart cockpits:</p>
 
 <p class="clearfix"><a href="mailto:guido.salvaneschi@unisg.ch">Talk to us</a> or
 <a href="/open-positions">join our group</a>
