--- a/contact.html
+++ b/contact.html
@@ -171,11 +171,11 @@
 
 <p>School of Future Science and Engineering, Soochow University<br />
 Prof. Dr. Cong Yang<br />
-Office 5. Future Science and InnovationCenter<br />
+Office 5. Future Science and Innovation Center<br />
 1 Jiuyong West Road<br />
 Suzhou<br />  
 Jiangsu Province<br />
-China</p>
+CHINA</p>
 
 
       
