--- a/team.html
+++ b/team.html
@@ -262,7 +262,7 @@
                     <h5 class="card-title">Wei Sui</h5>
                     
                     <p class="card-text">
-                        My current research focuses on the design of languages for distributed systems with a wide range of software architectures – e.g., peer-to-peer, cloud, edge, serverless, IoT – regarding sound programming models for the interaction between components, their composition, privacy protection issues, type systems for reasoning about the placement of data and computation.
+                        I am a senior engineer at Horizon Robotics. I earned my Ph.D. degree in pattern recognition and intelligent system from the CASIA (Institute of Automation, Institute of Automation, Chinese Academy of Sciences ) in 2016 and Bachelor‘s degree in Navigation Guidance and Control from Beihang University in 2011. After that, I worked as assistant research fellow at National Laboratory of Pattern Recognition, CASIA until 2019. Later, I joined Horizon Robotics for research on 2.5D&3D vision in the area of autonomous driving, and built the auto labeling team.
 
                     </p>
                     </a>
