--- a/index.html
+++ b/index.html
@@ -183,9 +183,9 @@
 </blockquote>
 
 <p>Welcome to <b>BeeLab’s website</b>.
-  The lab is guided by <b>Associate Professor Cong Yang</b> and is organized by several students from the <a href="http://future.suda.edu.cn/bkzs/main.htm" target="_blank">School of Future Science and Engineering, Soochow University</a>. Our projects focus on smart driving and smart cockpits:</p>
-<p>1.Intelligent driving: Mainly for models above L3, the use of the driver’s camera in the intelligent cockpit to design and implement visual fatigue detection algorithms to reduce the accidents caused by fatigue driving.<br>
-2.Smart Cockpit: Based on domestic large computing chips such as Journey 5, this project plans to develop a series of intelligent cockpit and intelligent driving perception reference algorithms for empowering the entire academic and industrial community.</p>
+  The lab is guided by <b>Associate Professor Cong Yang</b> and is organized by several students from the <a href="http://future.suda.edu.cn/bkzs/main.htm" target="_blank">School of Future Science and Engineering, Soochow University</a>. Our projects focus on <b>smart driving</b> and <b>smart cockpits</b>:</p>
+      <p><b>1.Intelligent driving: </b>Mainly for models above L3, the use of the driver’s camera in the intelligent cockpit to design and implement visual fatigue detection algorithms to reduce the accidents caused by fatigue driving.<br>
+        <b>2.Smart Cockpit: </b>Based on domestic large computing chips such as Journey 5, this project plans to develop a series of intelligent cockpit and intelligent driving perception reference algorithms for empowering the entire academic and industrial community.</p>
     
 <p class="clearfix"><a href="mailto:yangxinyu1213@gmail.com">Talk to us</a> or
 <a href="/open-positions">join our group</a>
