--- a/index.html
+++ b/index.html
@@ -201,9 +201,9 @@ please find <a href="/teaching">our courses, theses, and jobs</a>.</p>
         <div class="col-6 col-sm-3 col-md-2 mb-3">
             <a href="/members/eskandani" class="no-decoration">
                 <div class="card hoverable h-100 m-2">
-                    <img src="/assets/img/eskandani-profile.jpg" class="card-img-top" alt="MSc Nafise Eskandani" />
+                    <img src="/assets/img/yangxinyu-profile.jpg" class="card-img-top" alt="Yang Xinyu" />
                     <div class="card-body p-2">
-                        <div class="card-title m-0">MSc Nafise Eskandani</div>
+                        <div class="card-title m-0">Yang Xinyu</div>
                     </div>
                 </div>
             </a>
