--- a/index.html
+++ b/index.html
@@ -215,9 +215,9 @@ please find <a href="/teaching">our courses, theses, and jobs</a>.</p>
         <div class="col-6 col-sm-3 col-md-2 mb-3">
             <a href="/members/koehler" class="no-decoration">
                 <div class="card hoverable h-100 m-2">
-                    <img src="/assets/img/koehler-profile.jpg" class="card-img-top" alt="MSc Mirko Köhler" />
+                    <img src="/assets/img/qiancong-profile.jpg" class="card-img-top" alt="Qian Cong" />
                     <div class="card-body p-2">
-                        <div class="card-title m-0">MSc Mirko Köhler</div>
+                        <div class="card-title m-0">Qian Cong</div>
                     </div>
                 </div>
             </a>
@@ -229,9 +229,9 @@ please find <a href="/teaching">our courses, theses, and jobs</a>.</p>
         <div class="col-6 col-sm-3 col-md-2 mb-3">
             <a href="/members/oak" class="no-decoration">
                 <div class="card hoverable h-100 m-2">
-                    <img src="/assets/img/oak-profile.jpg" class="card-img-top" alt="MSc Aditya Oak" />
+                    <img src="/assets/img/sunruoxi-profile.jpg" class="card-img-top" alt="Sun Ruoxi" />
                     <div class="card-body p-2">
-                        <div class="card-title m-0">MSc Aditya Oak</div>
+                        <div class="card-title m-0">Sun Ruoxi</div>
                     </div>
                 </div>
             </a>
@@ -243,9 +243,9 @@ please find <a href="/teaching">our courses, theses, and jobs</a>.</p>
         <div class="col-6 col-sm-3 col-md-2 mb-3">
             <a href="/members/sokolowski" class="no-decoration">
                 <div class="card hoverable h-100 m-2">
-                    <img src="/assets/img/sokolowski-profile.jpg" class="card-img-top" alt="MSc Daniel Sokolowski" />
+                    <img src="/assets/img/xujunqi-profile.jpg" class="card-img-top" alt="Xu Junqi" />
                     <div class="card-body p-2">
-                        <div class="card-title m-0">MSc Daniel Sokolowski</div>
+                        <div class="card-title m-0">Xu Junqi</div>
                     </div>
                 </div>
             </a>
@@ -257,9 +257,9 @@ please find <a href="/teaching">our courses, theses, and jobs</a>.</p>
         <div class="col-6 col-sm-3 col-md-2 mb-3">
             <a href="/members/weisenburger" class="no-decoration">
                 <div class="card hoverable h-100 m-2">
-                    <img src="/assets/img/weisenburger-profile.jpg" class="card-img-top" alt="Dr. Pascal Weisenburger" />
+                    <img src="/assets/img/zhuchenyu-profile.jpg" class="card-img-top" alt="Zhu Chenyu" />
                     <div class="card-body p-2">
-                        <div class="card-title m-0">Dr. Pascal Weisenburger</div>
+                        <div class="card-title m-0">Shanghai Dazuo</div>
                     </div>
                 </div>
             </a>
@@ -271,9 +271,9 @@ please find <a href="/teaching">our courses, theses, and jobs</a>.</p>
         <div class="col-6 col-sm-3 col-md-2 mb-3">
             <a href="/members/zakhour" class="no-decoration">
                 <div class="card hoverable h-100 m-2">
-                    <img src="/assets/img/zakhour-profile.jpg" class="card-img-top" alt="MSc George Zakhour" />
+                    <img src="/assets/img/zhongzhouhan-profile.jpg" class="card-img-top" alt="Zhong Zhouhan" />
                     <div class="card-body p-2">
-                        <div class="card-title m-0">MSc George Zakhour</div>
+                        <div class="card-title m-0">Zhong Zhouhan</div>
                     </div>
                 </div>
             </a>
