--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@ please find <a href="/teaching">our courses, theses, and jobs</a>.</p>
                 <div class="card hoverable h-100 m-2">
                     <img src="/assets/img/zhuchenyu-profile.jpg" class="card-img-top" alt="Zhu Chenyu" />
                     <div class="card-body p-2">
-                        <div class="card-title m-0">Shanghai Dazuo</div>
+                        <div class="card-title m-0">Zhu Chenyu</div>
                     </div>
                 </div>
             </a>
@@ -291,6 +291,93 @@ please find <a href="/teaching">our courses, theses, and jobs</a>.</p>
             </a>
         </div>
   
+        <div class="col-6 col-sm-3 col-md-2 mb-3">
+            <a href="/members/eskandani" class="no-decoration">
+                <div class="card hoverable h-100 m-2">
+                    <img src="/assets/img/wangxiaomeng-profile.jpg" class="card-img-top" alt="Wang Xiaomeng" />
+                    <div class="card-body p-2">
+                        <div class="card-title m-0">Wang Xiaomeng</div>
+                    </div>
+                </div>
+            </a>
+        </div>
+  
+        <div class="col-6 col-sm-3 col-md-2 mb-3">
+            <a href="/members/eskandani" class="no-decoration">
+                <div class="card hoverable h-100 m-2">
+                    <img src="/assets/img/hanhongrun-profile.jpg" class="card-img-top" alt="Han Hongrun" />
+                    <div class="card-body p-2">
+                        <div class="card-title m-0">Han Hongrun</div>
+                    </div>
+                </div>
+            </a>
+        </div>
+  
+        <div class="col-6 col-sm-3 col-md-2 mb-3">
+            <a href="/members/eskandani" class="no-decoration">
+                <div class="card hoverable h-100 m-2">
+                    <img src="/assets/img/tangpei-profile.jpg" class="card-img-top" alt="Tang Pei" />
+                    <div class="card-body p-2">
+                        <div class="card-title m-0">Tang Pei</div>
+                    </div>
+                </div>
+            </a>
+        </div>
+  
+        <div class="col-6 col-sm-3 col-md-2 mb-3">
+            <a href="/members/eskandani" class="no-decoration">
+                <div class="card hoverable h-100 m-2">
+                    <img src="/assets/img/qianyufan-profile.jpg" class="card-img-top" alt="Qian Yufan" />
+                    <div class="card-body p-2">
+                        <div class="card-title m-0">Qian Yufan</div>
+                    </div>
+                </div>
+            </a>
+        </div>
+  
+        <div class="col-6 col-sm-3 col-md-2 mb-3">
+            <a href="/members/eskandani" class="no-decoration">
+                <div class="card hoverable h-100 m-2">
+                    <img src="/assets/img/houlingjia-profile.jpg" class="card-img-top" alt="Hou Lingjia" />
+                    <div class="card-body p-2">
+                        <div class="card-title m-0">Hou Lingjia</div>
+                    </div>
+                </div>
+            </a>
+        </div>
+  
+        <div class="col-6 col-sm-3 col-md-2 mb-3">
+            <a href="/members/eskandani" class="no-decoration">
+                <div class="card hoverable h-100 m-2">
+                    <img src="/assets/img/yincengshuai-profile.jpg" class="card-img-top" alt="Yin Cengshuai" />
+                    <div class="card-body p-2">
+                        <div class="card-title m-0">Yin Cengshuai</div>
+                    </div>
+                </div>
+            </a>
+        </div>
+  
+        <div class="col-6 col-sm-3 col-md-2 mb-3">
+            <a href="/members/eskandani" class="no-decoration">
+                <div class="card hoverable h-100 m-2">
+                    <img src="/assets/img/shijunan-profile.jpg" class="card-img-top" alt="Shi jun'an" />
+                    <div class="card-body p-2">
+                        <div class="card-title m-0">Shi Jun'an</div>
+                    </div>
+                </div>
+            </a>
+        </div>
+  
+        <div class="col-6 col-sm-3 col-md-2 mb-3">
+            <a href="/members/eskandani" class="no-decoration">
+                <div class="card hoverable h-100 m-2">
+                    <img src="/assets/img/zhongyiming-profile.jpg" class="card-img-top" alt="Zhong Yiming" />
+                    <div class="card-body p-2">
+                        <div class="card-title m-0">Zhong Yiming</div>
+                    </div>
+                </div>
+            </a>
+        </div>
   
 </div>
 
