--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ please find <a href="/teaching">our courses, theses, and jobs</a>.</p>
         
        
         <div class="col-6 col-sm-3 col-md-2 mb-3">
-            <a href="/members/eskandani" class="no-decoration">
+            <a href="https://qcyxy.github.io/" class="no-decoration">
                 <div class="card hoverable h-100 m-2">
                     <img src="/assets/img/yangxinyu-profile.jpg" class="card-img-top" alt="Yang Xinyu" />
                     <div class="card-body p-2">
