--- a/index.html
+++ b/index.html
@@ -216,12 +216,12 @@ please find <a href="/teaching">our courses, theses, and jobs</a>.</p>
                 <div class="card hoverable h-100 m-2">
                     <img src="/assets/img/suiwei-profile.jpg" class="card-img-top" alt="Sui Wei" />
                     <div class="card-body p-2">
-                        <div class="card-title m-0">Sui Wei</div>
+                        <p><div class="card-title m-0">Sui Wei</div><p/>
                     </div>
                 </div>
             </a>
         </div>
-  <br />
+  
   
         <div class="col-6 col-sm-3 col-md-2 mb-3">
             <a href="https://xinyu1213.github.io" class="no-decoration">
