--- a/index.html
+++ b/index.html
@@ -202,9 +202,9 @@ please find <a href="/teaching">our courses, theses, and jobs</a>.</p>
         <div class="col-6 col-sm-3 col-md-2 mb-3">
             <a href="https://xinyu1213.github.io" class="no-decoration">
                 <div class="card hoverable h-100 m-2">
-                    <img src="/assets/img/liweiyu-profile.jpg" class="card-img-top" alt="Li Weiyu" />
+                    <img src="/assets/img/liweiyu-profile.jpg" class="card-img-top" alt="Director: Cong Yang" />
                     <div class="card-body p-2">
-                        <div class="card-title m-0">Li Weiyu</div>
+                        <div class="card-title m-0">Director: Cong Yang</div>
                     </div>
                 </div>
             </a>
@@ -214,9 +214,9 @@ please find <a href="/teaching">our courses, theses, and jobs</a>.</p>
         <div class="col-6 col-sm-3 col-md-2 mb-3">
             <a href="https://xinyu1213.github.io" class="no-decoration">
                 <div class="card hoverable h-100 m-2">
-                    <img src="/assets/img/suiwei-profile.jpg" class="card-img-top" alt="Sui Wei" />
+                    <img src="/assets/img/suiwei-profile.jpg" class="card-img-top" alt="Deputy Director: Xiangbin Kong" />
                     <div class="card-body p-2">
-                        <p><div class="card-title m-0">Sui Wei</div><p/>
+                        <p><div class="card-title m-0">Deputy Director: Xiangbin Kong</div><p/>
                     </div>
                 </div>
             </a>
@@ -226,9 +226,9 @@ please find <a href="/teaching">our courses, theses, and jobs</a>.</p>
         <div class="col-6 col-sm-3 col-md-2 mb-3">
             <a href="https://qcyxy.github.io/" class="no-decoration">
                 <div class="card hoverable h-100 m-2">
-                    <img src="/assets/img/qiancong-profile.jpg" class="card-img-top" alt="Qian Cong" />
+                    <img src="/assets/img/qiancong-profile.jpg" class="card-img-top" alt="Deputy Director: Xinyu Li" />
                     <div class="card-body p-2">
-                        <div class="card-title m-0">Qian Cong</div>
+                        <div class="card-title m-0">Deputy Director: Xinyu Li</div>
                     </div>
                 </div>
             </a>
