--- a/index.html
+++ b/index.html
@@ -174,9 +174,9 @@
     <div class="clearfix">
       <blockquote>
   <p><i class="fas fa-quote-left"></i>
-“Where should I go?” - Alice. “That depends on where you want to end up.” - The Cheshire Cat.
+“FOCUS ON YOUR GROWING POTENTIAL.”
 <i class="fas fa-quote-right"></i><br />
-— Lewis Carroll</p>
+— An ARTIFICIAL SLOGAN GENERATOR</p>
 </blockquote>
 
 <p>Welcome to <b>BeeLab’s website</b>.
