--- a/open-positions.html
+++ b/open-positions.html
@@ -110,7 +110,7 @@
           </li>
           
           <li class="nav-item ">
-              <a class="nav-link text-nowrap" href="/open-positions">
+              <a class="nav-link text-nowrap" href="/course">
                 Courses
                 
               </a>
