--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
   <p><i class="fas fa-quote-left"></i>
 FOCUS ON YOUR GROWING POTENTIAL.
 <i class="fas fa-quote-right"></i><br />
-— An ARTIFICIAL SLOGAN GENERATOR</p>
+— AN ARTIFICIAL SLOGAN GENERATOR</p>
 </blockquote>
 
 <p>Welcome to <b>BeeLab’s website</b>.
