--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ please find <a href="/teaching">our courses, theses, and jobs</a>.</p>
                 <div class="card hoverable h-100 m-2">
                     <img src="/assets/img/yangcong-profile.jpg" class="card-img-top" alt="Director: Cong Yang" />
                     <div class="card-body p-2">
-                        <div class="card-title m-0">Director:     Cong Yang</div>
+                        <p><div class="card-title m-0" align="center">Director:<br/>Cong Yang</div><p>
                     </div>
                 </div>
             </a>
@@ -229,7 +229,7 @@ please find <a href="/teaching">our courses, theses, and jobs</a>.</p>
                 <div class="card hoverable h-100 m-2">
                     <img src="/assets/img/lixingyu-profile.png" class="card-img-top" alt="Deputy Director: Stanley Li" />
                     <div class="card-body p-2">
-                        <div class="card-title m-0">Deputy Director: Stanley Li</div>
+                        <p><div class="card-title m-0">Deputy Director: Stanley Li</div><p>
                     </div>
                 </div>
             </a>
