--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@ please find <a href="/teaching">our courses, theses, and jobs</a>.</p>
                 <div class="card hoverable h-100 m-2">
                     <img src="/assets/img/kongxiangbin-profile.jpg" class="card-img-top" alt="Deputy Director: Xiangbin Kong" />
                     <div class="card-body p-2">
-                        <p><div class="card-title m-0">Deputy Director: Xiangbin Kong</div><p/>
+                        <p><div class="card-title m-0" align="center">Deputy Director: <br/>Xiangbin Kong</div><p/>
                     </div>
                 </div>
             </a>
@@ -229,7 +229,7 @@ please find <a href="/teaching">our courses, theses, and jobs</a>.</p>
                 <div class="card hoverable h-100 m-2">
                     <img src="/assets/img/lixingyu-profile.png" class="card-img-top" alt="Deputy Director: Stanley Li" />
                     <div class="card-body p-2">
-                        <p><div class="card-title m-0">Deputy Director: Stanley Li</div><p>
+                        <p><div class="card-title m-0" align="center">Deputy Director:<br/> Stanley Li</div><p>
                     </div>
                 </div>
             </a>
