--- a/team.html
+++ b/team.html
@@ -177,7 +177,7 @@
     <div class="card hoverable">
         <div class="row no-gutters">
             <div class="col-sm-4 col-md-3">
-                <img src="/assets/img/yangcong-profile.jpg" height="auto" class="card-img img-fluid" alt="Prof.Cong Yang" />
+                <img src="/assets/img/yangcong-profile.jpg" height:auto  class="card-img img-fluid" alt="Prof.Cong Yang" />
             </div>
             <div class="team col-sm-8 col-md-9">
                 <div class="card-body">
