--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ please find <a href="/teaching">our courses, theses, and jobs</a>.</p>
         <div class="col-6 col-sm-3 col-md-2 mb-3">
             <a href="https://qcyxy.github.io/" class="no-decoration">
                 <div class="card hoverable h-100 m-2">
-                    <img src="/assets/img/lixingyu-profile.png" class="card-img-top" alt="Deputy Director: Stanley Li" />
+                    <img src="/assets/img/lixingyu-profile.jpg" class="card-img-top" alt="Deputy Director: Stanley Li" />
                     <div class="card-body p-2">
                         <p><div class="card-title m-0" align="center">Deputy Director:<br/> Stanley Li</div><p>
                     </div>
