--- a/team.html
+++ b/team.html
@@ -269,7 +269,7 @@
     <div class="card hoverable">
         <div class="row no-gutters">
             <div class="col-sm-4 col-md-3">
-                <img src="/assets/img/lixingyu-profile.png" class="card-img img-fluid" alt="Deputy Director Stanley Li" />
+                <img src="/assets/img/lixingyu-profile.jpg" class="card-img img-fluid" alt="Deputy Director Stanley Li" />
             </div>
             <div class="team col-sm-8 col-md-9">
                 <div class="card-body">
