--- a/team.html
+++ b/team.html
@@ -332,6 +332,7 @@
                 <div class="card-body">
                     <a href="https://xinyu1213.github.io/">
                     <h5 class="card-title">Xinyu Yang</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">Sophomore</h6>
                     
                     <p class="card-text">
                         I am a sophomore student at School of Future Science and Engineering of Soochow University which located in Suzhou, Jiangsu Province, China.
