--- a/team.html
+++ b/team.html
@@ -235,7 +235,7 @@
                     <h6 class="card-subtitle mb-2 text-muted">Deputy Director</h6>
                     
                     <p class="card-text">
-                        Xiangbin Kong Director Horizon Auto Bussines Development & Solution . Focuses on producing the autonomous driving solution for OEMs .With Over 17 years Auto industry experiences . He is an expert in cockpit , autonomous driving and chips ( SW & HW development and management ). Has many experences in mass global modal to SOP . Before Horizon , he served in Neusoft , Harman and Saic motor
+                        Xiangbin Kong Director, Horizon Auto Bussines Development & Solution. Focuses on producing the autonomous driving solution for OEMs. With Over 17 years Auto industry experiences. He is an expert in cockpit, autonomous driving and chips ( SW & HW development and management ). Has many experences in mass global modal to SOP. Before Horizon, he served in Neusoft , Harman and Saic motor
                     </p>
                     </a>
                     
