--- a/team.html
+++ b/team.html
@@ -571,7 +571,7 @@
                 <div class="card-body">
                     <a href="https://junqixu.github.io/">
                     <h5 class="card-title">Junqi Xu</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">Sophomore</h6>
+                    <h6 class="card-subtitle mb-2 text-muted">Freshman</h6>
                     
                     <p class="card-text">
                         I am a freshman at school of Future Science and Technology of Soochow University with which located in Suzhou, Jiangsu provice, China.
